# wasm-in-worker

./: README.md
vite-react-wasm-web-worker-comlink/: README.md  package.json
vite-react-wasm-web-worker-comlink/public/: worker.js
vite-react-wasm-web-worker-comlink/public/pkg/: package.json  wasm_module.d.ts  wasm_module.js  wasm_module_bg.wasm  wasm_module_bg.wasm.d.ts
vite-react-wasm-web-worker-comlink/src/: App.tsx
vite-react-wasm-web-worker-comlink/wasm-module/: Cargo.toml
vite-react-wasm-web-worker-comlink/wasm-module/src/: lib.rs
vite-wasm-web-worker/: README.md  package.json
vite-wasm-web-worker/src/: App.tsx  wasm.worker.ts
vite-wasm-web-worker/src/wasm-module/: add.js
wasm-in-web-worker/: Cargo.toml  index.js
wasm-in-web-worker/pkg/: package.json  wasm_in_web_worker.d.ts  wasm_in_web_worker.js  wasm_in_web_worker_bg.wasm  wasm_in_web_worker_bg.wasm.d.ts
wasm-in-web-worker/src/: lib.rs
wasm-tutorial-worker/: index.html  package-lock.json  package.json  webpack.config.js
wasm-tutorial-worker/rust/: Cargo.toml
wasm-tutorial-worker/rust/src/: lib.rs  progress.js
wasm-tutorial-worker/src/: index.js  julia.js  julia.worker.js
