[package]
name = "rust"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = true


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.23.14"
num-complex = "0.4.0"
base64 = "0.13.0"

console_error_panic_hook = "0.1.6"
wee_alloc = { version = "0.4.5", optional = true }
wasm-bindgen = { version = "0.2.73" }